# sahayak

./: .env  .gitignore  README.md  firebase-service-account.json  package-lock.json  package.json  register-step1.dto.ts  register-step2.dto.ts  tsconfig.json  verify-otp.dto.ts
Sahaayak/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
Sahaayak/android/: build.gradle  settings.gradle
Sahaayak/android/app/: CMakeLists.txt  build.gradle
Sahaayak/android/app/src/main/cpp/: native-lib.cpp
Sahaayak/android/app/src/main/java/com/sahaayak/: MainActivity.kt  MainApplication.kt
Sahaayak/android/app/src/main/res/values/: strings.xml
Sahaayak/ios/: Podfile
Sahaayak/ios/Sahaayak/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
Sahaayak/ios/Sahaayak.xcodeproj/: project.pbxproj
Sahaayak/ios/Sahaayak.xcodeproj/xcshareddata/xcschemes/: Sahaayak.xcscheme
Sahaayak/src/: AppGlobals.js
Sahaayak/src/components/: AppNavigator.js  GoogleLoginButton.js  TealBackground.js
Sahaayak/src/screens/: DashboardScreen.js  HomeScreen.js  LoginScreen.js  SignupScreen.js
Sahaayak/src/screens/ForgotPassword/: EmailScreen.js  OTPScreen.js  ResetPasswordScreen.js
Sahaayak/src/styles/: colors.js  commonStyles.js  typography.js
src/: app.module.ts  main.ts
src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
src/auth/dto/: complete-register.dto.ts  login.dto.ts  register.dto.ts  send-otp.dto.ts  verify-otp.dto.ts
src/auth/entities/: user.entity.ts
src/firebase/: firebase.service.ts
src/mail/: mail.service.ts
(+2 files in other folders)
